Simplify identifier handling